--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "the_indian_dust",
+  "homepage": "https://Baijnath234.github.io/the_indian_dust",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build --repo=https://github.com/Baijnath234/the_indian_dust.git",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
